@@ -2,6 +2,7 @@ Gaim: The Pimpin' Penguin IM Clone thats good for the soul!
 
 version 0.58:
 	* Bulgarian translation added (Thanks, Igel Itzo)
+	* Better applet transparency
 
 version 0.57 (04/25/2002):
 	* New authorization method for Yahoo!
